--- a/join.html
+++ b/join.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/033f20de26.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -13,6 +14,7 @@
             <a href="#">Discover</a>
             <a href="#">Join</a>
         </nav>
+        <span><i class="fa-solid fa-bars"></i></span>
     </header>
     <section id="join">
                 <h1>Join the <span> foun.</span> </h1>
@@ -37,12 +39,12 @@
     <footer>
         <div class="container">
             <div class="left">
-                <a href="#">About Us</a>
-                <a href="#">Contact</a>
+                <a href="#" class="about">About Us</a>
+                <a href="#" class="about">Contact</a>
             </div>
             <div class="right">
-                <a href="#"><img src="images/facebook.svg" alt="logo facebook">Facebook</a>
-                <a href="#"><img src="images/twitter.svg" alt="Logo twitter">Twitter</a>
+                <a href="#"><img src="images/facebook.svg" alt="logo facebook"><span>Facebook</span></a>
+                <a href="#"><img src="images/twitter.svg" alt="Logo twitter"><span>Twitter</span></a>
             </div>
         </div>
     </footer>
