--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feel them music</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/033f20de26.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -13,6 +14,7 @@
             <a href="#">Discover</a>
             <a href="#">Join</a>
         </nav>
+        <span><i class="fa-solid fa-bars"></i></span>
     </header>
     <section id="landingpage">
         <div class="left">
