--- a/feature.html
+++ b/feature.html
@@ -11,8 +11,8 @@
     <header>
         <img src="images/logo.svg" alt="images logo" />
         <nav>
-            <a href="#">Discover</a>
-            <a href="#">Join</a>
+            <a href="feature.html">Discover</a>
+            <a href="join.html">Join</a>
         </nav>
         <span><i class="fa-solid fa-bars"></i></span>
 
