--- a/feature.html
+++ b/feature.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.svg" alt="images logo" />
+        <a href="index.html"><img src="images/logo.svg" alt="images logo" /></a>
         <nav>
             <a href="feature.html">Discover</a>
             <a href="join.html">Join</a>
